# bdrgateway-testclient

./: .gitignore  README.adoc  create_defined_ns.py  create_samplings.py  main.py  make_all.sh  output_broad.ttl  output_narrow.ttl  pyproject.toml  scenario_abis_embargoed.ttl  scenario_tern_broad_100.ttl  scenario_tern_degree_100.ttl  scenario_tern_narrow_100.ttl  shacl_breaker.py  synth.py  test_client_broad.ttl  test_client_conservation.ttl  test_client_conservation_01.ttl  test_client_conservation_dataset.ttl  test_client_degree.ttl  test_client_degree_dataset.ttl  test_client_embargoed.ttl  test_client_narrow.ttl  test_client_narrow_dataset.ttl  utils.py  validate_eg.py  validate_eg_rdf.py  validate_eg_shapes.py
client/: _TERN.py  __main__.py  create_samplings.py  main.py  synth.py  synth_01.py  synthesiser_conservation.py  synthesiser_simple.py  synthesizer.py  synthesizer_abis.py  synthesizer_scale.py  synthesizer_tern.py  tern_synthesizer.py  test.ttl  validate_egs.py  validate_egs_rdf.py
client/model/: __init__.py  agent.py  attribute.py  concept.py  feature_of_interest.py  has_site_visit.py  klass.py  sample.py  (+15 more)
scaling/: scale_10.ttl  scale_1000.ttl  scale_500.ttl
scripts/: post-to-gateway.sh  shacl_breaker.py
test_data/: bdr-msgs.ttl  t001.ttl
tests/: test_attribute.py  test_concept.py  test_feature_of_interest.py  test_float.py  test_klass.py  test_observation.py  test_rdfdataset.py  test_sample.py  test_sampling.py  test_site.py  test_sitevisit.py  test_synthesizer.py  test_synthesizer_tern.py  test_taxon.py  test_tern_synthesizer.py  test_value.py
(+42 files in other folders)
