[tool.poetry]
name = "ndesgateway-testclient"
version = "0.1.0"
description = ""
authors = ["nicholascar <nicholas.car@surroundaustralia.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.21.1"
rdflib = "^6.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
