[tool.poetry]
name = "bdrgateway-testclient"
version = "0.1.0"
description = ""
authors = ["nicholascar <nicholas.car@surroundaustralia.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
httpx = "^0.21.1"
rdflib = "^6.0.2"
pyshacl = "^0.19.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
